cmake_minimum_required(VERSION 3.0.2)
project(object_list)

find_package(catkin REQUIRED COMPONENTS
  geometry_msgs
  morai_msgs
  roscpp
  rospy
  std_msgs
)

catkin_package(
  INCLUDE_DIRS include
#  LIBRARIES object_list
  CATKIN_DEPENDS geometry_msgs morai_msgs roscpp rospy std_msgs
#  DEPENDS system_lib
)

include_directories(
 include
  ${catkin_INCLUDE_DIRS}
)

add_executable(${PROJECT_NAME}
src/object_list.cpp

include/object_list.h
)

target_link_libraries(${PROJECT_NAME}
  ${catkin_LIBRARIES}
)

